tests/ui/match/issue-91058.rs
struct S(());

fn main() {
    let array = [S(())];

    match array {
        [()] => {}
        //~^ ERROR mismatched types [E0308]
        _ => {}
    }
}
